Add token permissions

--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -8,6 +8,10 @@ on:
   schedule:
     - cron: "17 * * * *"
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   scheduled:
     runs-on: ubuntu-latest
@@ -16,7 +20,6 @@ jobs:
 
       - uses: azure/login@v1
         with:
-          allow-no-subscriptions: true
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
