--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -6,7 +6,7 @@ name: Update data
 on:
   workflow_dispatch:
   schedule:
-    - cron: "17 * * * *"
+    - cron: "0 5,11,17,23 * * *"
 
 permissions:
   id-token: write
